# proxy-api

./: Cargo.toml  README.md  config.yaml
src/: main.rs
src/api/: mod.rs
src/api/routes/: anthropic.rs  openai.rs
src/api/transformers/: anthropic_to_openai.rs  mod.rs  openai_to_anthropic.rs
src/common/: content_utils.rs  mod.rs
src/core/: client.rs  config.rs  mod.rs
